# illegal_stop

./: .gitignore  README.md  main.py  pyproject.toml
dash_plotly/: plotly_map.py
model/: _model
mqtt/: main.py
yolo/: predict.py
