[tool.poetry]
name = "illegal-stop"
version = "0.1.0"
description = ""
authors = ["yeeyeeeyee <aagg50211@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.3.23"
torch = {version = "2.4.1", source = "pytorch"}
torchvision = {version = "0.19.1", source = "pytorch"}
torchaudio = {version = "2.4.1", source = "pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
